# LocalAiLab_rag

./: .env.example  .gitignore  AGENTS.md  AIM_Module1_Presentation_Content.md  DEEPAGENTS_COMPLIANCE.md  DEEPAGENTS_IMPROVEMENTS.md  EDA_Summary_Slide.pptx  LANGGRAPH_DEV_FIX.md  RAG_REMEDIATION_PLAN.md  REACT_GUIDE.md  README.md  SECURITY_AUDIT_REPORT.md  ``  agent.py  agent_input_middleware.py  agent_registry.py  agent_runtime.py  ai_presentation.pptx  ai_presentation.qmd  check_pptx.py  check_pptx_lib.py  conversation_memory.py  coqui_tts_sidecar.py  create_pptx.py  data_analysis_framework.py  deepagents.toml  demo_presentation.py  eda_script.py  eda_summary.txt  generate_pptx.py  generate_pptx_v2.py  generate_pptx_v3.py  generate_pptx_v4.py  install_pptx.py  install_pptx_v4.py  kill-port-2024.bat  launcher.bat - Shortcut.lnk  message_sanitizer.py  metadata_store.py  model_config.py  (+50 more)
.claude/: settings.local.json
.streamlit/: config.toml
conversation_history/: streamlit-chat-thread.md
data_scientist_agent/: __init__.py  agent.py  prompts.py  tools.py
evals/: __init__.py  eval_dataset.jsonl  rag_eval.py  rag_eval_dataset.jsonl  run_eval.py  run_rag_eval.py
large_tool_results/: 0437ba83-2a1c-460b-a743-a6834702ab1b  2a4f09c1-6764-46f5-90f3-bdd150d1fea5  3d4bfd89-21db-4cfa-b5ec-0cc94c1d8aa8  594cbe91-b2e1-400b-8cdd-bbe6a13fb988  7273bcfe-68a7-4e82-8d01-76280deed45c  7be292e2-69c5-4949-a7e3-408006c2439b  89ff78db-3753-40a0-b5fc-efb3c7d29622  8f40463f-dd69-4c7e-b92e-c72b0448929f  98bd617d-9ccd-4fcc-8c36-0883334614b6  b7d66bb5-f138-4011-9a7f-72c5168bf9bc  c3b6b92b-292e-4452-ba72-bf263a0cfe1c  e1f0471a-d5b5-4c81-8f56-3033949dc2c0  edabf12c-493f-4642-807b-43154c253ea7  f561138c-d69d-49d7-b86c-f0b9b887c44f
literature_drafts/: aim.json  structural_equation_modelling.json
literature_reports/: MSME_AI_adoption_in_Cambodia_review.docx  aim_review.docx  structural_equation_modelling_review.docx
literature_review/: __init__.py  pdf_resolver.py  pipeline.py  report_generator.py  search_apis.py  tools.py
metadata/: plots.json  rag_ui_state.json
presentation_agent/: __init__.py  agent.py  (+3 more)
(+200 files in other folders)
