[project]
name = "lv-combined-agents"
version = "0.1.0"
description = "Multi-specialist agent orchestrator built with deepagents"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ven Seyhah", email = "seyhahven@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
  "deepagents>=0.3.0",
  "langchain>=0.3.0",
  "langchain-openai>=0.1.0",
  "langchain-ollama>=0.1.0",
  "langchain-huggingface>=0.1.0",
  "pyyaml>=6.0",
  "langgraph-cli[inmem]>=0.1.55",
  "python-dotenv>=1.0.0",
  "python-pptx>=0.6.21",
  "reportlab>=4.0.0",
  "pillow>=10.0.0",
  "pytesseract>=0.3.13",
  "imageio-ffmpeg>=0.5.1",
  "faster-whisper>=1.1.1",
  "tavily-python>=0.1.0",
  "httpx>=0.24.0",
  "markdownify>=0.11.0",
  "typing-extensions>=4.5.0",
  "streamlit>=1.56.0",
  "chromadb>=0.5.0",
  "langchain-community>=0.3.0",
  "langchain-text-splitters>=0.3.0",
  "sentence-transformers>=3.0.0",
  "pymupdf>=1.24.0",
  "unstructured>=0.15.0",
  "python-docx>=1.2.0",
  "openpyxl>=3.1.5",
  "fastapi>=0.100.0",
  "uvicorn>=0.23.0",
  "rich>=13.0.0",
  "nest-asyncio>=1.6.0",
  "langgraph-checkpoint-sqlite>=3.0.3",
  "langchain-experimental>=0.4.1",
  "playwright>=1.58.0",
  "rank-bm25>=0.2.2",
  "keybert>=0.9.0",
  "tiktoken>=0.12.0",
  "youtube-transcript-api>=0.6.2",
  "langgraph-api>=0.8.1",
]

[project.optional-dependencies]
remote = [
  "langchain-anthropic>=0.1.0",
]
llama_cpp = [
  "llama-cpp-python>=0.3.0",
]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.21.0",
  "ruff>=0.1.0",
]

[project.urls]
Repository = "https://github.com/langchain-ai/deepagents"
Documentation = "https://docs.langchain.com/oss/python/deepagents/overview"

[tool.uv]
dev-dependencies = ["lv-combined-agents[dev]"]

[tool.ruff]
lint.select = ["E", "F", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
norecursedirs = [
  ".git",
  ".venv",
  ".venv311",
  "__pycache__",
  "pytest-cache-files-*",
  "tmp",
  "agent_state",
  "chat_history",
  "conversation_history",
  "generated_plots",
  "large_tool_results",
]
